# rust_SPC_bounty

./: Cargo.toml  README.md
assets/: kusama-identities.json  polkadot-identities.json
metadata/: encointer-kusama.scale
src/: main.rs  working.rs
