[package]
name = "Rust_System_Collator_Checker"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { version = "0.44.0"}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
indicatif = "0.17"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sp-core = "38.1.0"
futures = "0.3"
jsonrpsee = "0.24.10"
hex = "0.4.3"
serde_json = "1.0.145"
parity-scale-codec = "3.7.5"
serde = { version = "1.0.228", features = ["derive"] }

